# briefly

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: mcp.py  orchestrator.py  prompts.py  subagents.py  tools.py
app/api/v1/: routes.py  schemas.py
app/core/: config.py  llm.py  logging.py  middleware.py  repository.py  tracing.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
outputs/achieve-by-petra/: achieve-by-petra-61faaa7a.md
outputs/anthropic/: anthropic-7c1079f3.md
outputs/bevy/: bevy-7bf97e20.md  bevy-e2235365.md
outputs/clerk/: clerk-fe054984.md
outputs/cursor-anysphere/: cursor-anysphere-eb67ba66.md
outputs/gamemaker/: gamemaker-382316d5.md
outputs/godot/: godot-34611f97.md
outputs/google-alphabet-inc/: google-alphabet-inc-d8f33d64.md
outputs/hollard-insurance-group/: hollard-insurance-group-864d6daa.md
outputs/langsmith/: langsmith-3d63c0d7.md
outputs/microsoft-corporation/: microsoft-corporation-71928ab2.md
outputs/mongodb-atlas/: mongodb-atlas-fb7a4e42.md
outputs/openai/: openai-578d0b3f.md  openai-613ca222.md
outputs/really-great-tech/: really-great-tech-6bf50119.md
outputs/spacetimedb/: spacetimedb-3f74f595.md
outputs/supabase/: supabase-c1521402.md
outputs/tavily/: tavily-f1c93110.md
outputs/turso/: turso-c6b2a56b.md
tests/app/: conftest.py  test_config.py  test_integration.py  test_llm.py  test_repository.py  test_routes.py  test_schemas.py
(+6 files in other folders)
