[project]
name = "briefly"
version = "0.1.0"
description = "A tool to generate brief summaries of articles and documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "felixLandlord", email = "felix.landlord.nunoo@gmail.com" }
]
dependencies = [
    "aiofiles>=25.1.0",
    "deepagents>=0.6.0a3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0a2",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0a2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
]
